@@ -138,15 +138,15 @@ class TraceContextTest {
     }
 
     @Test
-    void testElasticTraceparentHeaderPrecedence() {
+    void testW3CTraceparentHeaderPrecedence() {
         Map<String, String> textHeaderMap = Map.of(
-            TraceContext.W3C_TRACE_PARENT_TEXTUAL_HEADER_NAME, "00-0af7651916cd43dd8448eb211c80319c-b9c7c989f97918e1-01",
-            TraceContext.ELASTIC_TRACE_PARENT_TEXTUAL_HEADER_NAME, "00-dd8448eb211c80319c0af7651916cd43-f97918e1b9c7c989-00"
+            TraceContext.W3C_TRACE_PARENT_TEXTUAL_HEADER_NAME, "00-0af7651916cd43dd8448eb211c80319c-b9c7c989f97918e1-00",
+            TraceContext.ELASTIC_TRACE_PARENT_TEXTUAL_HEADER_NAME, "00-dd8448eb211c80319c0af7651916cd43-f97918e1b9c7c989-01"
         );
         final TraceContext child = TraceContext.with64BitId(tracer);
         assertThat(TraceContext.<Map<String, String>>getFromTraceContextTextHeaders().asChildOf(child, textHeaderMap, TextHeaderMapAccessor.INSTANCE)).isTrue();
-        assertThat(child.getTraceId().toString()).isEqualTo("dd8448eb211c80319c0af7651916cd43");
-        assertThat(child.getParentId().toString()).isEqualTo("f97918e1b9c7c989");
+        assertThat(child.getTraceId().toString()).isEqualTo("0af7651916cd43dd8448eb211c80319c");
+        assertThat(child.getParentId().toString()).isEqualTo("b9c7c989f97918e1");
         assertThat(child.getId()).isNotEqualTo(child.getParentId());
         assertThat(child.isSampled()).isFalse();
     }
